--- a/src/app/components/client folder/red-clients/red-clients.component.html
+++ b/src/app/components/client folder/red-clients/red-clients.component.html
@@ -1,16 +1,30 @@
 <div class="row">
-  <div class="col-sm-12 col-md-8">
+  <div class="col-12">
     <div class="card">
-      <div class="form-check-inline card-body">
-        <input class="form-control" [(ngModel)]="searchClient" type="text" placeholder="Rechercher un abonné"
-          aria-label="Rechercher" />
-        <button class="btn btn-outline-success" type="submit" [disabled]="searchClient.trim().length == 0"
-          (click)="search()">
-          Rechercher
-        </button>
-        <button class="btn btn-outline-danger" [disabled]="searchClient.trim().length == 0" (click)="this.initForm()">
-          Effacer
-        </button>
+      <div class="row">
+        <div class="col-12 col-md-6 form-check-inline card-body">
+          <input class="form-control" [(ngModel)]="searchClient" type="text" placeholder="Rechercher un abonné"
+            aria-label="Rechercher" />
+          <button class="btn-outline-success" type="submit" [disabled]="searchClient.trim().length == 0"
+            (click)="search()">
+            Rechercher
+          </button>
+          <button class="btn-outline-danger" [disabled]="searchClient.trim().length == 0" (click)="this.initForm()">
+            Effacer
+          </button>
+        </div>
+        <div class="col-md-4 col-12 form-check-inline card-body">
+          <input class="form-control" [(ngModel)]="searchBoite" type="text" placeholder="Numero boite"
+            aria-label="Rechercher" />
+          <button class="small btn-outline-success" type="submit" [disabled]="searchBoite.trim().length == 0"
+            (click)="searchB()">
+            Rechercher
+          </button>
+          <button class=" small btn-outline-danger" [disabled]="searchBoite.trim().length == 0"
+            (click)="this.initForm()">
+            Effacer
+          </button>
+        </div>
       </div>
       <div *ngIf="searchResults">
         <table class="table table-striped">
