--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -52,8 +52,8 @@
         </mat-list-item>
 
         <mat-list-item *ngFor="let menuItem of menuItems" class="{{menuItem.class}}">
-          <a [routerLink]="[menuItem.path]" class="d-flex menu" (click)="close()"
-            *ngIf="hasPower === menuItem.hasPower || isSuperviseur === menuItem.isSuperviseur || isVisiteur === menuItem.isVisiteur">
+          <a [routerLink]="[menuItem.path]" class="d-flex menu" (click)="close()" *ngIf="hasPower === menuItem.hasPower || isAgent === menuItem.isAgent || isSuperviseur ===
+            menuItem.isSuperviseur || isVisiteur === menuItem.isVisiteur">
             <fa-icon [icon]=" menuItem.icon" class="mr-2 {{menuItem.class}}"></fa-icon>
             <p>{{menuItem.title}}</p>
           </a>
