working on deletetion

--- a/src/app/components/activity/activity.component.html
+++ b/src/app/components/activity/activity.component.html
@@ -1,4 +1,9 @@
 <div class="row">
+  <div class="col-12">
+     Total: {{total}} | Redevance: {{redevance}}
+  </div>
+</div>
+<div class="row">
   <div class="col-12" *ngIf="allPayments.length>0">
     <mat-form-field appearance="fill">
       <mat-label>Filtrer par date</mat-label>
