--- a/src/app/components/receipt/receipt.component.html
+++ b/src/app/components/receipt/receipt.component.html
@@ -13,9 +13,6 @@
     </div>
   </div>
   <div class="border-bottom"></div>
-  <div class="col-12 text-center mt-2 mb-2">
-    <span class="display-4">RECU</span>
-  </div>
   <div class="row name border mt-5 mb-5">
     <div class="col-2 text-right">
       <ul class="list-group">
@@ -97,6 +94,10 @@
             <td>{{payment?.name}}</td>
             <td>{{payment?.price}}</td>
           </tr>
+          <tr *ngIf="newPayment?.tax">
+            <td>Penalité</td>
+            <td>3000</td>
+          </tr>
           <tr>
             <td></td>
             <td>{{newPayment?.total}}</td>
@@ -107,7 +108,7 @@
   </div>
 
   <div class="row m-5">
-    <div class="col-12 text-center mt-5">
+    <div class="col-12 text-center mt-2">
       <span class="h3 mt-5">Service Commercial</span>
     </div>
   </div>
