--- a/src/app/components/forfaits/forfaits.component.css
+++ b/src/app/components/forfaits/forfaits.component.css
@@ -1,8 +1,28 @@
 .delete{
     height: 100vh;
     background-color: black;
-    opacity: 9;
+    opacity: 7;
     position: absolute;
     top: 0;
     left: 0;
+}
+.delete_box{
+    position: absolute;
+    background-color: white;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+    height: 50%;
+
+}
+
+.box-button {
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    width: 50%;
+    height: 50%;
+    transform: translate(-20%, -20%);
+
 }
