finish grouping payment

--- a/src/app/components/client folder/client/client.component.html
+++ b/src/app/components/client folder/client/client.component.html
@@ -189,6 +189,9 @@
       </table>
     </div>
   </div>
+  <div class="col-12 col-md-2">
+    <button [routerLink]="['/payAll/'+idUser]" >Tout payer</button>
+  </div>
 </div>
 <!-- <div class="row">
   <div class="col-12 col-md-6">
