--- a/src/app/components/client folder/client/client.component.html
+++ b/src/app/components/client folder/client/client.component.html
@@ -17,17 +17,17 @@
         </div>
       </div>
       <div>
-        <mat-nav-list>
-          <mat-list-item class="font-weight-bold small text-center">
-            <h4>{{ client?.name }}</h4>
-          </mat-list-item>
-          <mat-list-item> Telephone: {{ client?.number }} </mat-list-item>
-          <mat-list-item>
+        <ul class="list-group">
+          <li class="list-group-item font-weight-bold">
+            {{ client?.name }}
+          </li>
+          <li class="list-group-item"> Telephone: {{ client?.number }} </li>
+          <li class="list-group-item">
             Type de client: {{ clientBoite?.clientType }}
-          </mat-list-item>
-          <mat-list-item> Addresse: {{ client?.address }}</mat-list-item>
-          <mat-list-item> Email: {{ client?.email }} </mat-list-item>
-        </mat-nav-list>
+          </li>
+          <li class="list-group-item"> Addresse: {{ client?.address }}</li>
+          <li class="list-group-item"> Email: {{ client?.email }} </li>
+        </ul>
       </div>
     </div>
   </div>
@@ -48,13 +48,15 @@
       </div>
       <div class="card-body form-group">
         <ul class="list-group">
-          <li>
+          <li class="list-group-item">
             <span>Nom: </span><input formControlName="name" type="text" [value]="client.name" />
           </li>
-          <li>Telephone: <input type="text" formControlName="number" [value]="client?.number" /></li>
-          <li>Addresse: <input type="text" formControlName="address" [value]="client?.address" /></li>
-          <li>Email: <input type="text" formControlName="email" [value]="client?.email" /></li>
-          <li>
+          <li class="list-group-item">Telephone: <input type="text" formControlName="number" [value]="client?.number" />
+          </li>
+          <li class="list-group-item">Addresse: <input type="text" formControlName="address"
+              [value]="client?.address" /></li>
+          <li class="list-group-item">Email: <input type="text" formControlName="email" [value]="client?.email" /></li>
+          <li class="list-group-item">
             Type de client: <br />
 
             <mat-form-field class="form-group">
@@ -89,8 +91,8 @@
           Resilier
         </button>
 
-        <button class="mt-5" *ngIf="clientBoite?.status !== 'Resilié' &&( hasPower || isSuperviseur)" class="mt-3 btn-success text-white"
-          width="50" height="20" (click)="isNewBoite = true">
+        <button class="mt-5" *ngIf="clientBoite?.status !== 'Resilié' &&( hasPower || isSuperviseur)"
+          class="mt-3 btn-success text-white" width="50" height="20" (click)="isNewBoite = true">
           Changement de type de boite
         </button>
       </div>
@@ -113,18 +115,20 @@
       </div>
     </div>
   </div>
-  <div class="col-12 col-md-6 ">
+  <div class="col-12 col-md-6 " *ngIf="clientBoite?.status !=='Exoneré' ">
     <h2>
       <fa-icon [icon]="faBox"></fa-icon>
       Historique des operations
     </h2>
     <div class="d-flex justify-content-between rounded border p-5">
-      <a class="btn btn-group btn-info" *ngIf="hasPower || isSuperviseur || isAgent" [routerLink]="['/operation/' + idUser]" target="_blank">Effectuer une
+      <a class="btn btn-group btn-info" *ngIf="hasPower || isSuperviseur || isAgent"
+        [routerLink]="['/operation/' + idUser]" target="_blank">Effectuer une
         operation</a>
-        <a class="btn btn-group btn-danger" *ngIf="hasPower || isSuperviseur || isAgent" [routerLink]="['/forfait/' + idUser]" target="_blank">Ajouter un forfait</a>
+      <a class="btn btn-group btn-danger" *ngIf="hasPower || isSuperviseur || isAgent"
+        [routerLink]="['/forfait/' + idUser]" target="_blank">Ajouter un forfait</a>
     </div>
     <!-- <ul class="list-group" *ngFor="let operations of myoperations">
-      <li class="list-group-item" *ngFor="let operation of operations.operations">
+      <li class="list-group-item" class="list-group-item" *ngFor="let operation of operations.operations">
         {{ operation.name }} : {{ operation.price }} Fdj pour la boite
         {{ operations.boiteNumber }} le {{ operations.createdAt }}
       </li>
@@ -134,7 +138,7 @@
 
 <mat-divider class="mt-2 mb-2"></mat-divider>
 
-<div class="row d-flex justify-content-between">
+<div class="row d-flex justify-content-between" *ngIf="clientBoite?.status !=='Exoneré' ">
   <div class="col-12 col-md-5">
     <h2>
       <fa-icon [icon]="faMoney" class="text-success"></fa-icon>
@@ -180,7 +184,8 @@
           <tr *ngFor="let unpaid of unpaids">
             <td>{{ unpaid.date }}</td>
             <td>
-              <button *ngIf="isAgent || hasPower || isSuperviseur" (click)="pay(unpaid.idClient, unpaid.date)" class="btn btn-group btn-info">
+              <button *ngIf="isAgent || hasPower || isSuperviseur" (click)="pay(unpaid.idClient, unpaid.date)"
+                class="btn btn-group btn-info">
                 Payer
               </button>
             </td>
@@ -190,7 +195,7 @@
     </div>
   </div>
   <div class="col-12 col-md-2">
-    <button [routerLink]="['/payAll/'+idUser]" >Tout payer</button>
+    <button [routerLink]="['/payAll/'+idUser]">Tout payer</button>
   </div>
 </div>
 <!-- <div class="row">
