--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -8,12 +8,12 @@
       <div class="form-group">
         <div class="form-group">
           <label class="form-check-label small font-italic font-weight-bold">Votre email</label>
-          <input id="email" [(ngModel)]="email" type="text" class="form-control" placeholder="email" />
+          <input id="email" [(ngModel)]="email" type="text" class="form-control" placeholder="ashraf@laPoste.dj" />
         </div>
         <div class="form-group">
           <label class="form-check-label small font-italic font-weight-bold">Votre mot de passe</label>
           <input id="password" [(ngModel)]="password" type="password" class="form-control"
-            placeholder="mot de passe" />
+            placeholder="123@Passer" />
         </div>
         <div class="form-group d-flex">
           <button *ngIf="!isLoading" class="btn btn-group btn-outline-warning text-primary" (click)="submit()">
